--- a/web/pom.xml
+++ b/web/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.bkvm</groupId>
         <artifactId>bkvm-parent</artifactId>
-        <version>3.3.1-SNAPSHOT</version>
+        <version>3.3.1</version>
         <relativePath>..</relativePath>
     </parent>
 
